k8s/observability/opensearch-dashboards/overlays/prod/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-opensearch-dashboards
spec:
  hostnames:
    - opensearch.example.invalid
  parentRefs:
    - name: homelab-gw
      namespace: prod-networking
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: opensearch-dashboards-prod
          port: 5601
